# h5da

./: .gitignore  LICENSE  README.md  requires.txt
.github/: dependabot.yml
hdfa/: .gitignore  README.md  create_data_files.py  dataRetriever.py  dataWrangler.py  data_extract.py  data_retriever.py  data_wrangler.py  extract_data_files.py  fileWrangler.py  hdfa-config.json  imageProcessor.py  imageSearch.py  imageSearchH5.py  mpLocal.py  parsingProcessor.py  schema.json  schemaProcessor.py  search_images_H5.py  textFileProcessor.py  videoProcessor.py
hdfa/htmldoc/: dataWrangler.html  mpLocal.html  parsingProcessor.html  videoProcessor.html
hdfa/samples/: extract_data_files.py  hdfa-config.json  open_data_files.py
hdfa/samples/schema/: file_schema.json
hdfa/schema/: file_schema.json
hdfa/src/hdfa/: README.md  dataWrangler.py  pyproject.toml
hdfa/src/hdfa/hdfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hdfa/src/hdfa/htmldoc/: dataRetriever.html  dataWrangler.html  imageProcessor.html  schemaProcessor.html  textFileProcessor.html
hdfa/src/hdfa/processors/: imageProcessor.py  schemaProcessor.py  textFileProcessor.py  videoProcessor.py
hdfa/src/hdfa/processors/htmldoc/: dataWrangler.html  imageSearch.html  mpLocal.html  schemaProcessor.html  videoProcessor.html
hdfa/src/hdfa/processors/tools/: dataRetriever.py  imageSearch.py  mpLocal.py
hdfa/src/hdma/processors/htmldoc/: dataRetriever.html  dataWrangler.html  imageSearch.html  mpLocal.html  parsingProcessor.html
hdfa/tests/: extract_data_files.py  open_data_files.py  schema.json
